fix: fix layout shift issue

--- a/vanilla-typescript/src/ui/SelectMenu/style.css
+++ b/vanilla-typescript/src/ui/SelectMenu/style.css
@@ -1,5 +1,5 @@
 .select-menu {
-  width: 380px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -27,7 +27,8 @@
 }
 
 .select-menu .options {
-  position: relative;
+  position: absolute;
+  width: 100%;
   padding: 20px;
   margin-top: 10px;
   border-radius: 8px;
